--- a/_includes/social.html
+++ b/_includes/social.html
@@ -22,10 +22,10 @@
   {% endif %}
 
     {% if site.social.gitee %}
-    <!-- Github -->
+    <!-- GitEE -->
     <li class="navigation__item">
       <a href="https://gitee.com/java_wxid" title="廖志伟的码云" target="_blank">
-        <i class='social fa fa-github'></i>
+        <i class='social fa fa-gitee'></i>
         <span class="label">码云</span>
       </a>
     </li>
