--- a/_includes/social.html
+++ b/_includes/social.html
@@ -4,32 +4,43 @@
   {% if site.social.weibo %}
   <!-- Weibo -->
   <li class="navigation__item">
-    <a href="https://weibo.com/javaliao" title="廖志伟的微博" target="_blank">
+    <a href="https://weibo.com/javaliao" title="微博（javaliao）" target="_blank">
       <i class='social fa fa-weibo'></i>
-      <span class="label">Weibo</span>
+      <span class="label">微博（javaliao）</span>
     </a>
   </li>
   {% endif %}
 
-  {% if site.social.github %}
+  {% if site.social.githubBoom %}
   <!-- Github -->
   <li class="navigation__item">
-    <a href="https://github.com/BoomManager" title="廖志伟的Github" target="_blank">
+    <a href="https://github.com/BoomManager" title="Github（BoomManager）" target="_blank">
       <i class='social fa fa-github'></i>
-      <span class="label">Github</span>
+      <span class="label">Github（BoomManager）</span>
     </a>
   </li>
   {% endif %}
+
+    {% if site.social.githubjava %}
+    <!-- Github -->
+    <li class="navigation__item">
+      <a href="https://github.com/javaliao" title="Github（javaliao）" target="_blank">
+        <i class='social fa fa-github'></i>
+        <span class="label">Github（javaliao）</span>
+      </a>
+    </li>
+    {% endif %}
 
     {% if site.social.gitee %}
     <!-- GitEE -->
     <li class="navigation__item">
-      <a href="https://gitee.com/java_wxid" title="廖志伟的码云" target="_blank">
+      <a href="https://gitee.com/java_wxid" title="码云（java_wxid）" target="_blank">
         <i class='social fa fa-gitee'></i>
-        <span class="label">码云</span>
+        <span class="label">码云（java_wxid）</span>
       </a>
     </li>
     {% endif %}
+
   
 
   </ul>
