--- a/_includes/social.html
+++ b/_includes/social.html
@@ -35,7 +35,7 @@
     <!-- GitEE -->
     <li class="navigation__item">
       <a href="https://gitee.com/java_wxid" title="码云（java_wxid）" target="_blank">
-        <i class='social fa fa-gitee'></i>
+        <i class='social fa fa-github'></i>
         <span class="label">码云（java_wxid）</span>
       </a>
     </li>
